Fix overflow in 1920px or higher res. p4

--- a/css/style.css
+++ b/css/style.css
@@ -436,7 +436,7 @@ body {
     border: none;
     outline: none;
     width: 21rem;
-    height: 23.4rem;
+    height: 21.4rem;
     overflow: hidden;
     -ms-overflow-style: none; /* ie & edge */
     scrollbar-width: none; /* firefox */
